Adjusting Webform contact settings Styling Webform paragraph type

--- a/web/themes/hive/css/style.css
+++ b/web/themes/hive/css/style.css
@@ -53,9 +53,28 @@ input[type="search"] {
   border-radius: 0;
 }
 
-.form-text, .form-textarea {
-  border: 1px solid #555;
+.form-text,
+.form-textarea,
+.form-email,
+.form-tel,
+.form-url,
+.form-number,
+.form-date {
   padding: 4px;
+  border: solid 1px #eee;
+  color: #555;
+  background-color: #f5f5f5;
+}
+
+.form-text:focus,
+.form-textarea:focus,
+.form-email:focus,
+.form-tel:focus,
+.form-url:focus,
+.form-number:focus,
+.form-date:focus {
+  border-color: #BA8748;
+  outline: none;
 }
 
 button,
@@ -590,6 +609,12 @@ ul.sf-menu ul {
 
 .paragraph--type--columns-three .layout__region--third {
   padding-left: 10px;
+}
+
+.paragraph--type--webform {
+  margin: 20px 0;
+  padding: 0 20px;
+  border: solid 1px #555;
 }
 
 .region-navigation {
