--- a/web/themes/hive/sass/components/_paragraphs.scss
+++ b/web/themes/hive/sass/components/_paragraphs.scss
@@ -19,3 +19,9 @@
     padding-left: 10px;
   }
 }
+
+.paragraph--type--webform {
+  margin: 20px 0;
+  padding: 0 20px;
+  border: solid 1px $color_gray;
+}
