--- a/web/themes/hive/sass/vars/_30-globals.scss
+++ b/web/themes/hive/sass/vars/_30-globals.scss
@@ -41,6 +41,12 @@ $button_fontcolor: #fff;
 $button_radius: 0;
 
 
+$form_input_border_color: $color_ltgray;
+
+$form_input_color: $body_fontcolor;
+
+$form_input_bg_color: $color_smoke;
+
 // Gloabl link styles (mostly in the main body of text).
 // ------------------------------------
 
