--- a/web/themes/hive/css/style.css
+++ b/web/themes/hive/css/style.css
@@ -905,6 +905,47 @@ ul.sf-menu ul {
   margin-bottom: 15px;
 }
 
+.view-schedule .session-description {
+  height: 100px;
+  position: relative;
+  overflow: hidden;
+  padding-bottom: 40px;
+  font-size: 0.8em;
+}
+
+.view-schedule .session-description .session-less {
+  display: none;
+}
+
+.view-schedule .session-description i {
+  display: inline-block;
+  padding-left: 10px;
+}
+
+.view-schedule .session-description.opened {
+  height: auto;
+}
+
+.view-schedule .session-description.opened .session-more {
+  display: none;
+}
+
+.view-schedule .session-description.opened .session-less {
+  display: block;
+}
+
+.view-schedule .session-toggle {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  text-align: center;
+  cursor: pointer;
+  border-top: dotted 1px;
+  padding: 5px;
+  background-color: rgba(255, 255, 255, 0.75);
+}
+
 .view-schedule h3 {
   clear: both;
   border-bottom: dotted 1px;
