--- a/web/themes/hive/sass/components/_views--schedule.scss
+++ b/web/themes/hive/sass/components/_views--schedule.scss
@@ -10,6 +10,40 @@
     line-height: 1.5em;
     margin-bottom: 15px;
   }
+  .session-description {
+    height: 100px;
+    position: relative;
+    overflow: hidden;
+    padding-bottom: 40px;
+    font-size: 0.8em;
+    .session-less {
+      display: none;
+    }
+    i {
+      display: inline-block;
+      padding-left: 10px;
+    }
+    &.opened {
+      height: auto;
+      .session-more {
+        display: none;
+      }
+      .session-less {
+        display: block;
+      }
+    }
+  }
+  .session-toggle {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    text-align: center;
+    cursor: pointer;
+    border-top: dotted 1px;
+    padding: 5px;
+    background-color: rgba(255,255,255,0.75);
+  }
   h3 {
     clear: both;
     border-bottom: dotted 1px;
